# Irecco_Lab

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.tmp.driveupload/: 157397  157447  157451  157455  157459  157461  157465  157469  157473  157477  157481  157485  157489  157491  157499  157503  157507  157511  157513  (+98 more)
backend/: Dockerfile  alembic.ini  config.py  database.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_users_table.py  0002_create_products_table.py  0003_create_waitlist_entries_table.py  0004_create_support_tables.py  0005_create_notifications_table.py
backend/modules/beta_program/: models.py  repository.py  router.py  schemas.py  service.py
backend/modules/docs/: models.py  repository.py  router.py  schemas.py  service.py
backend/modules/identity/: models.py  repository.py  router.py  schemas.py  service.py
backend/modules/notifications/: models.py  repository.py  router.py  schemas.py  service.py
backend/modules/products/: models.py  repository.py  router.py  schemas.py  service.py
backend/modules/support/: models.py  repository.py  router.py  schemas.py  service.py
backend/shared/: base_model.py  dependencies.py  exceptions.py  security.py
backend/tests/: conftest.py
backend/tests/modules/beta_program/: test_service.py
backend/tests/modules/identity/: test_service.py
backend/tests/modules/products/: test_service.py
backend/tests/modules/support/: test_service.py
(+15 files in other folders)
